--- a/src/app/SharedComponents/modal/modal.html
+++ b/src/app/SharedComponents/modal/modal.html
@@ -1,1 +1,10 @@
-<p>modal works!</p>
+<div class="page-content fixed top-0 left-0 bg-black/50 flex-col justify-center items-center">
+    <div class="w-2/4 h-50 bg-primary rounded-xl p-8">
+        <div class="flex-row justify-between border-b-2 pb-2">
+            <header class="text-black font-nunito !text-xl">Sample Header</header>
+            <button>
+                <lucide-icon [img]="CloseIcon" color="#000"></lucide-icon>
+            </button>
+        </div>
+    </div>
+</div>
