--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,29 +1,48 @@
 @import "tailwindcss";
 //background
+
+.page{
+    width: 100%;
+    height: 100dvh;
+}
+.page-content{
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 10px;
+    // @apply text-primary;
+}
 .bg-primary{
     background-color: #EAE1D4;
 }
 .bg-secondary{
     background-color: #B18343;
 }
-.bg-primary{
+.bg-accent{
     background-color: #0A352D;
 }
 .bg-dark{
     background-color: #212529;
 }
 
+//text
+.text-primary{
+    color: #EAE1D4 ;
+}
+
 
 //button
 button{
-    padding: 10px 20px;
+    padding: 8px 25px;
     border-radius: 10px;
     cursor: pointer;
     font-weight: 600;
 }
+
+
 .btn-primary{
     background-color: #0d6efd;
-    color: #0a0a0a;
+    color: #ffffff !important;
 }
 .btn-secondary{
     background-color: #6c757d;
@@ -55,4 +74,23 @@ button{
 .font-nunito{
     font-family: "Nunito", sans-serif;
     font-size: 16px;
+}
+
+//flex
+.flex-col{
+    display: flex;
+    flex-direction: column;
+}
+.flex-row{
+    display: flex;
+    flex-direction: row;
+}
+
+
+.text-field{
+    width: 100%;
+    border-radius: 10px;
+    padding: 8px;
+    border: 1px solid rgb(121, 121, 121);
+    outline: unset !important;
 }
